- `readJSONFile()`
  - renamed to `readJsonFile()`
  - extracted (unused)
- `readYamlConfigFile()`
  - extracted (unused)
- `convertAiColor()`
  - extracted
  - renamed to `aiColorToCss()`
  - refactored source
  - added unit tests
  - extracted `darkGrayToBlack()`
- `getAllArtboardBounds()`
  - extracted
  - added unit tests
  - refactored source
  - now returns `null` instead of `undefined` when passed an empty array
- dropped `getArtboardSettings()`, `parseObjectName()` does the same thing
- dropped `getDocumentSlug()`
- extracted `makeList()`
- extracted `extendFontlist()`
- extracted `formatError()`
- extracted `replaceSvgIds()`
- extracted `getArtboardUniqueName()`